@@ -33,6 +33,7 @@
 	* common/include/*: Ditto.
 	* common/docman/*: Ditto.
 	* common/forum/*: Ditto.
+	* common/frs/*: Ditto.
 
 2008-01-11  Roland Mas  <lolando@debian.org>
 
